<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.format.DateUtils" />

        <import type="io.ffem.lite.preference.AppPreferencesKt" />

        <import type="io.ffem.lite.util.ExtensionUtilKt" />

        <variable
            name="result"
            type="io.ffem.lite.data.TestResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="6dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="4dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@{result.email}"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:visibility="@{result.email.isEmpty() ? View.GONE : View.VISIBLE}"
                tools:text="Description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@{result.testImageNumber == -1 ? ExtensionUtilKt.toLocalString(result.name) : ExtensionUtilKt.toLocalString(result.name) + ` [` + result.testImageNumber + `]`}"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    tools:text="Contaminant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text=": "
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/sample_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@{ExtensionUtilKt.toLocalString(result.sampleType)}"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    tools:text="Water" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@{DateUtils.getRelativeTimeSpanString(result.date)}"
                android:textSize="14sp"
                tools:text="date time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@{String.valueOf(result.id)}"
                android:textSize="13sp"
                android:visibility="@{AppPreferencesKt.isDiagnosticMode() ? View.VISIBLE : View.GONE}"
                tools:text="Test id" />
        </LinearLayout>

        <TextView
            android:id="@+id/textResultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:clickable="false"
            android:focusable="false"
            android:result="@{result}"
            android:resultSize="@{result.value}"
            android:textIsSelectable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="No match" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
