<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="preferenceCategoryTesting"
        android:title="@string/testing"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:key="@string/dummyResultKey"
            android:title="Return dummy results"
            app:allowDividerAbove="true"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:key="@string/dummyImageKey"
            android:summary="Adds a button to pick a photo from the gallery or media folder for analysis"
            android:title="Load a photo file to analyze"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false" />
        <EditTextPreference
            android:dialogMessage="Enter the sample image number. Enter blank to revert to camera image"
            android:inputType="number"
            android:key="@string/testImageNumberKey"
            android:selectAllOnFocus="true"
            android:title="Test Image Number"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
