...
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:text="@string/select_dilution"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noDilution_btn"
        style="@style/Widget.Collect.Button.Custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minWidth="260dp"
        android:minHeight="70dp"
...
        android:text="@string/times_dilution"
        android:textSize="17sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dilution2_btn"
        style="@style/Widget.Collect.Button.Custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minWidth="260dp"
        android:minHeight="70dp"
...
